k8s-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  labels:
    app: backend
    namespace: default

spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  
  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: rafaelvzago/fortune-backend-rust:1.0
          ports:
            - containerPort: 8080
