k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: default

spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
        - name: frontend
          image: rafaelvzago/fortune-frontend:1.2
          ports:
            - containerPort: 80
