k8s-manifests/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: default
  

spec:
  type: ClusterIP
  selector:
    app: backend
  
  ports:
    - name: http
      containerPort: 8080
      port: 8080
      protocol: TCP
