k8s-manifests/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: frontend

  ports:
    - protocol: TCP
      name: http-front
      port: 80
      targetPort: 80
